fmm/grep
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/sri/Github/bempp-rs/fmm/Cargo.toml
workspace: /home/sri/Github/bempp-rs/Cargo.toml
warning: some crates are on edition 2021 which defaults to `resolver = "2"`, but virtual workspaces default to `resolver = "1"`
note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
note: to use the edition 2021 resolver, specify `workspace.resolver = "2"` in the workspace root's manifest
warning: /home/sri/Github/bempp-rs/fmm/Cargo.toml: unused manifest key: dev
warning: /home/sri/Github/bempp-rs/fmm/Cargo.toml: unused manifest key: target.aarch64-apple-darwin.rustflags
warning: unused imports: `RandomAccessMut`, `rlst_col_vec`
  --> field/src/field.rs:14:28
   |
14 |     dense::{rlst_mat, Dot, RandomAccessMut, RawAccess, RawAccessMut, Shape, rlst_col_vec},
   |                            ^^^^^^^^^^^^^^^                                  ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `axial_reflection_surface`, `axially_reflect_components`, `diagonal_reflection`, `diagonally_reflect_components`, `self`
  --> field/src/field.rs:28:15
   |
28 |     surface::{axial_reflection_surface, diagonal_reflection},
   |               ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^
29 |     transfer_vector::{
30 |         axially_reflect_components, compute_transfer_vectors, compute_transfer_vectors_unique,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |         diagonally_reflect_components, self,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^

warning: unused import: `bempp_tools::Array3D`
 --> field/src/types.rs:4:5
  |
4 | use bempp_tools::Array3D;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `j`
   --> field/src/field.rs:237:18
    |
237 |             for (j, sibling) in siblings.iter().enumerate() {
    |                  ^ help: if this is intentional, prefix it with an underscore: `_j`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `k`
   --> field/src/field.rs:238:22
    |
238 |                 for (k, halo_child) in halo_child_set.iter().enumerate() {
    |                      ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: type alias `PermutationMatrix` is never used
  --> field/src/types.rs:92:6
   |
92 | type PermutationMatrix =
   |      ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: type alias `PermutedMultiIndices` is never used
  --> field/src/types.rs:96:6
   |
96 | type PermutedMultiIndices = Vec<usize>;
   |      ^^^^^^^^^^^^^^^^^^^^

warning: `bempp-field` (lib) generated 7 warnings (run `cargo fix --lib -p bempp-field` to apply 5 suggestions)
   Compiling bempp-fmm v0.1.0 (/home/sri/Github/bempp-rs/fmm)
error[E0423]: expected value, found builtin type `f64`
   --> fmm/src/field_translation.rs:878:49
    |
878 |             let mut test_check_potential = vec![f64; size];
    |                                                 ^^^ not a value

warning: unused imports: `HashSet`, `Mul`, `MutexGuard`, `cell::RefCell`
 --> fmm/src/field_translation.rs:3:28
  |
3 |     collections::{HashMap, HashSet},
  |                            ^^^^^^^
4 |     ops::{Deref, DerefMut, Mul},
  |                            ^^^
5 |     sync::{Arc, Mutex, MutexGuard, RwLock},
  |                        ^^^^^^^^^^
6 |     time::Instant, cell::RefCell,
  |                    ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `FromPrimitive`
  --> fmm/src/field_translation.rs:13:20
   |
13 | use num::{Complex, FromPrimitive};
   |                    ^^^^^^^^^^^^^

warning: unused import: `hadamard::hadamard_product_sibling`
  --> fmm/src/field_translation.rs:19:5
   |
19 |     hadamard::hadamard_product_sibling,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self`
  --> fmm/src/field_translation.rs:27:35
   |
27 |     kernel::{Kernel, KernelScale, self},
   |                                   ^^^^

warning: unused import: `constants::ROOT`
  --> fmm/src/field_translation.rs:31:75
   |
31 | use bempp_tree::{types::{morton::MortonKey, single_node::SingleNodeTree}, constants::ROOT, implementations::helpers::find_corners};
   |                                                                           ^^^^^^^^^^^^^^^

warning: unused imports: `common::tools::PrettyPrint`, `global`, `rlst_rand_col_vec`
  --> fmm/src/field_translation.rs:33:5
   |
33 |     common::tools::PrettyPrint,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
36 |         global, rlst_col_vec, rlst_mat, rlst_pointer_mat, rlst_rand_col_vec, traits::*, Dot, Shape,
   |         ^^^^^^                                            ^^^^^^^^^^^^^^^^^

warning: unused import: `constants::CACHE_SIZE`
  --> fmm/src/field_translation.rs:41:5
   |
41 |     constants::CACHE_SIZE,
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: unnecessary parentheses around pattern
   --> fmm/src/field_translation.rs:655:24
    |
655 |             .for_each(|(freq)| {
    |                        ^    ^
    |
    = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
    |
655 -             .for_each(|(freq)| {
655 +             .for_each(|freq| {
    |

warning: unnecessary parentheses around assigned value
   --> fmm/src/field_translation.rs:720:62
    |
720 | ...                   *sav.raw +=  (scale * ker * *sig.raw);
    |                                    ^                      ^
    |
help: remove these parentheses
    |
720 -                                                 *sav.raw +=  (scale * ker * *sig.raw);
720 +                                                 *sav.raw +=  scale * ker * *sig.raw;
    |

warning: unused imports: `common::traits::ColumnMajorIterator`, `dense::rlst_rand_mat`
   --> fmm/src/fmm.rs:381:16
    |
381 |     use rlst::{common::traits::ColumnMajorIterator, dense::rlst_rand_mat};
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `evaluate_laplace_one_target`
   --> fmm/src/fmm.rs:384:36
    |
384 |     use bempp_kernel::laplace_3d::{evaluate_laplace_one_target, Laplace3dKernel};
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `MortonKeyInterface`
  --> fmm/src/field_translation.rs:28:18
   |
28 |     tree::{Tree, MortonKeyInterface},
   |                  ^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0423`.
warning: `bempp-fmm` (lib test) generated 12 warnings
error: could not compile `bempp-fmm` (lib test) due to previous error; 12 warnings emitted
